force-app/main/default/objects/Persona_Aggregation_History__c.object
<CustomObject>
    <fields>
        <fullName>PAG_Idempotency_Key__c</fullName>
        <label>Idempotency Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAG_Parent__c</fullName>
        <label>Persona Aggregation</label>
        <referenceTo>Persona_Aggregation__c</referenceTo>
        <relationshipLabel>History</relationshipLabel>
        <relationshipName>History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PAG_RecordedAt__c</fullName>
        <label>Recorded At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PAG_State_Snapshot__c</fullName>
        <label>State Snapshot</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Persona Aggregation History</label>
    <nameField>
        <displayFormat>PAGH-{000000}</displayFormat>
        <label>History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona Aggregation Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>